Remove top border on small screens, fix logo size.

--- a/assets/stylesheets/responsive/custom.css
+++ b/assets/stylesheets/responsive/custom.css
@@ -327,7 +327,9 @@ a.link_button_green_large {
 #banner {
 
   /* locale border */
-   border-top: 4px solid $locale-bg;
+  @include respond-min( $main_menu-mobile_menu_cutoff ){
+    border-top: 4px solid $locale-bg;
+  }
 
   /* Hide the greeting on smaller devices */
   .greeting {
@@ -358,6 +360,9 @@ a.link_button_green_large {
   #logo_wrapper{
       @media(max-width: $main_menu-mobile_menu_cutoff ){
         padding: 0.5em 0 0.5em 0.9375em;
+        img {
+          height: 30px;
+        }
       }
 
   }
